--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,14 +1,8 @@
-html {
-  font-size: 10px;
-  font-family: sans-serif;
-}
-
-* {
-  margin: 0;
-  padding: 0;
+html,
+body {
+  height: 100%;
 }
 
 #root {
-  width: 100vw;
-  height: 100vh;
+  height: 100%;
 }
